@@ -1,3 +1,7 @@
+2002-07-13  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
+	* src/test-widget.c: (test_source): Fix test-widget segfault.
+
 2002-07-12  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* aclocal.m4: Obsolete.
